gladeui_DATA =				\
	cronosII.glade			\
	composer.glade			\
	install.glade			\
	preferences.glade		\
	ui-text-editor.glade

gladeuidir = $(pkgdatadir)/ui

Pmap_DATA = \
	copy16.xpm		\
	cut16.xpm		\
	forward.xpm		\
	forward-big.xpm	\
	mail-write.xpm	\
	mail.xpm		\
	mail16.xpm		\
	mails.png		\
	mark.xpm		\
	mcard.xpm		\
	move.xpm		\
	new.xpm			\
	next.xpm		\
	paste16.xpm		\
	prev.xpm		\
	print.xpm		\
	receive.xpm		\
	reply.xpm		\
	reply-all-big.xpm	\
	reply-big.xpm	\
	save.xpm		\
	save16.xpm		\
	send.xpm		\
	send-later.xpm	\
	send16.xpm		\
	unread.xpm

Pmapdir = $(pkgdatadir)/ui


EXTRA_DIST = $(Pmap_DATA) $(gladeui_DATA)
