gladeui_DATA =				\
	cronosII.glade			\
	composer.glade			\
	install.glade			\
	preferences.glade		\
	ui-text-editor.glade

gladeuidir = $(pkgdatadir)/ui

Pmap_DATA = \
	copy-message16.xpm	\
	copy16.xpm		\
	cut16.xpm		\
	delete16.xpm	\
	filter.xpm		\
	forward.xpm		\
	forward-big.xpm	\
	mail-forward16.xpm	\
	mail-reply16.xpm	\
	mail-reply-all16.xpm	\
	mail-write.xpm	\
	mail.xpm		\
	mail16.xpm		\
	mails.png		\
	mark.xpm		\
	mcard.xpm		\
	move.xpm		\
	move-message16.xpm	\
	new.xpm			\
	next.xpm		\
	next16.xpm		\
	paste16.xpm		\
	prev.xpm		\
	prev16.xpm		\
	print.xpm		\
	print16.xpm		\
	receive.xpm		\
	receive16.xpm	\
	reply.xpm		\
	reply-all-big.xpm	\
	reply-big.xpm	\
	save.xpm		\
	save16.xpm		\
	send.xpm		\
	send-later.xpm	\
	send-receive.xpm	\
	send16.xpm		\
	unread.xpm

Pmapdir = $(pkgdatadir)/ui


EXTRA_DIST = $(Pmap_DATA) $(gladeui_DATA)
